Resume, minor fixes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,5 @@
   link: /research.html
 - name: Navy
   link: /navy.html
-- name: Hire Me!
-  link: /hireme.html
-  
+- name: Resume
+  link: /resume.pdf
