--- a/.vale.ini
+++ b/.vale.ini
@@ -9,6 +9,8 @@ Packages = Microsoft, Readability, write-good, custom
 [*.md]
 BasedOnStyles = Vale, Microsoft, Readability, write-good, custom
 
+BlockIgnores = (?s) *(\$\$.*?\$\$)
+
 Microsoft.Acronyms = NO
 Microsoft.Ellipses = NO
 Microsoft.FirstPerson = NO
