--- a/.vale.ini
+++ b/.vale.ini
@@ -14,4 +14,5 @@ BlockIgnores = (?s) *(\$\$.*?\$\$)
 Microsoft.Acronyms = NO
 Microsoft.Ellipses = NO
 Microsoft.FirstPerson = NO
+Microsoft.SentenceLength = NO
 write-good.E-Prime = NO
