prefetch and add slashes for no redirect

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 - name: Home
   link: /
 - name: Blog
-  link: /blog
+  link: /blog/
 - name: Research
-  link: /research
+  link: /research/
 - name: Navy
-  link: /navy
+  link: /navy/
 - name: Resume
   link: /resume.pdf
   disable-boost: true
